@@ -26,6 +26,7 @@
 - msvs2003prj, msvs2005prj: fixed to generate correct precompiled headers
   setting for auto vs. manual PCH creation
 - fixed incorrect dependencies of the "install" target (#225)
+- added support for Visual Studio 2008 (#186)
 
 
 Version 0.2.3
